# datar-numpy

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.codesandbox/: setup.sh
.github/workflows/: ci.yml
datar_numpy/: __init__.py  plugin.py  utils.py  version.py
datar_numpy/api/: arithm.py  asis.py  bessel.py  complex.py  constants.py  cum.py  date.py  misc.py  random.py  seq.py  sets.py  special.py  string.py  trig.py  which.py
tests/: conftest.py  test_arithm.py  test_asis.py  test_bessel.py  test_complex.py  test_cum.py  test_misc.py  test_other_hooks.py  test_random.py  test_seq.py  test_sets.py  test_special.py  test_string.py  test_trig.py  test_utils.py  test_which.py  utils.py
