[tool.poetry]
name = "datar-numpy"
version = "0.2.1"
description = "The numpy backend for datar"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "datar_numpy"}]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8"
datar = "^0.13"
numpy = "^1.20"

[tool.poetry.plugins.datar]
numpy = "datar_numpy:plugin"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --tb=short --cov=datar_numpy --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"
