[project]
name = "datar-numpy"
version = "0.3.7"
description = "The numpy backend for datar"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datar>=0.15.9,<0.16",
    # "datar @ ../datar",
    "numpy>=2,<3",
]

[project.optional-dependencies]
scipy = ["scipy>=1.8,<2"]
wcwidth = ["wcwidth>=0.2,<1"]
all = ["scipy>=1.8,<2", "wcwidth>=0.2,<1"]

[project.entry-points."datar"]
numpy = "datar_numpy:plugin"

[dependency-groups]
dev = [
    "pytest>=7,<8",
    "pytest-cov>=4,<5",
    "flake8>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datar_numpy"]

[tool.pytest.ini_options]
addopts = "-vv --assert=plain -p no:asyncio --tb=short --cov=datar_numpy --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.pyright]
reportFunctionMemberAccess = false
